--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   h1 Train Schedule
   p Select your train below to see its current schedule.
   #wrapper
-    #trainList
+    #Find your train!
       h2 Trains
       #trains.d-flex.flex-row
     #trainInfo
